# Papercut

./: .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.e2e.json  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md  gsd-file-manifest.json  project_rules_decisions.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-smoke-test.yml  release.yml  security.yml
.planning/: FEATURE_BACKLOG.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TEST_PLAN.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.security/: updater-signing-plan.md
scripts/: check-version.mjs  generate_photo_heavy_pdf.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  gs-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: fonts.css
src/components/: AboutDialog.tsx  CompareStep.tsx  ConfigureStep.tsx  CrashReporter.tsx  Dashboard.tsx  ErrorBoundary.tsx  FeedbackButton.tsx  FeedbackDialog.tsx  FirstLaunchBanner.tsx  ImageCompareStep.tsx  ImageConfigureStep.tsx  LandingCard.tsx  PrivacyFooter.tsx  PrivacyModal.tsx  RecentDirsButton.tsx  SaveStep.tsx  SplashScreen.tsx  StepBar.tsx  ThemeToggle.tsx  ToolHeader.tsx  UpdateChecker.tsx
src/context/: EditorContext.tsx  ToolContext.tsx
src/e2e/: wdio.conf.ts
src/hooks/: useDependencies.ts  useFavorites.ts  useFileDrop.ts  useFileOpen.ts  useImageProcessor.ts  useMergePdfProcessor.ts  usePdfProcessor.ts  useRecentDirs.ts  useRotatePdfProcessor.ts  useSavedSignatures.ts  useSplitPdfProcessor.ts  useTheme.ts  useUndoRedo.ts
test-fixtures/: sample.tiff
tools/generate-fixtures/: Cargo.toml
tools/generate-fixtures/src/: main.rs
(+272 files in other folders)
