[package]
name = "tauri-app"
version = "1.0.0-beta.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
image = "0.25"
webp = "0.3"
uuid = { version = "1", features = ["v4"] }

# E2E automation — opt-in via `--features e2e`. Never enabled in release builds.
# Previously declared under `[target.'cfg(debug_assertions)'.dependencies]`, which
# Cargo evaluates against target spec triples (not the rustc debug_assertions
# flag), so inclusion was non-deterministic and produced an unexpected-cfg warning.
tauri-plugin-webdriver-automation = { version = "0.1", optional = true }

[features]
e2e = ["dep:tauri-plugin-webdriver-automation"]


